[package]
name = "deadwiki"
version = "0.1.20"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"
license = "MIT"
description = "dead simple personal wiki"
repository = "https://github.com/xvxx/deadwiki"
readme = "README.md"
keywords = ["wiki", "markdown", "cli"]
categories = ["command-line-utilities"]
exclude = [
  "assets/*",
  "wiki/*",
]

[[bin]]
name = "dead"
path = "src/main.rs"

[features]
gui = ["web-view"]
default = []

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="\\d+\\.\\d+\\.\\d+-dev", replace="{{version}}"},
]
dev-version-ext = "dev"

[build-dependencies]
vial = "0.1.1"

[dependencies]
vial = "0.1.1"

pulldown-cmark = { version = "0.7", default-features = false }
autolink = "0.3.0"
walkdir = "2"
atomicwrites = "0.2.5"
lazy_static = "1.4"

web-view = { version = "0.5.4", optional = true }
