[package]
name = "deadwiki"
version = "0.1.23-dev"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"
license = "MIT"
description = "dead simple personal wiki"
repository = "https://github.com/xvxx/deadwiki"
readme = "README.md"
keywords = ["wiki", "markdown", "cli"]
categories = ["command-line-utilities"]
exclude = [
  "wiki/*",
]

[[bin]]
name = "dead"
path = "src/main.rs"

[features]
default = []

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="\\d+\\.\\d+\\.\\d+-dev", replace="{{version}}"},
]
dev-version-ext = "dev"

[build-dependencies]
vial = "0.1.5"

[dependencies]
vial = "0.1.5"

pulldown-cmark = { version = "0.7", default-features = false }
linkify = "0.4.0"
